fixed the table coin name overflowing and navbar  progessbar not taking required width

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -449,8 +449,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2;
-  position: absolute;
   width: 886px;
   height: 393px;
   padding: 48px;
